--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> Claudio Espinoza | WDD 130 | Personal Homepage</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Claudio Antonio Espinoza | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello my name is Claudio Espinoza" width="200">
+        <p>I am Claudio Espinoza. I am from Chile, what I like the most, is spending
+            meaningful time with my family. This is a picture of one of our vacation
+            trip to The Rio Temple with my wife.</p>
+    </main>
+    <footer>
+        <p>©2025 🌴Claudio A. Espinoza 🌴Nacimiento, Chile</p>
+    </footer>
 </body>
+
 </html>
