--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -25,6 +25,10 @@
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, cupiditate.</p>
         </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, quo!</p>
+        </section>
     </main>
     <aside>
         <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800x500/payson-utah-temple-celestial-room-1458545.jpg"
