--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Claudio Espinoza | WDD 130 | Personal Homepage</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description"
+        content="This homepage is a picture of myself Claudio Espinoza. I am taking this course web fundamentals to increase my website developement skills. The purpose of this page is to show web development skills">
+    <meta name=" author" content="Claudio A. Espinoza">
+    <link rel=" stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -22,6 +25,13 @@
             meaningful time with my family. This is a picture of one of our vacation
             trip to The Rio Temple with my wife.</p>
     </main>
+    <aside>
+        <h2>Chile</h2>
+        <img src="images/chile.jpg" alt="Chile landscape">
+        <p>Chile is in Southamerica. It bordered by Peru to the north, Argentina to the East, and the pacific ocean to
+            the west.In Chile we have a variety of landscape and weather. We have both weather extremes. In the north we
+            have the atacama desert, and in the south we have the antarctica.</p>
+    </aside>
     <footer>
         <p>©2025 🌴Claudio A. Espinoza 🌴Nacimiento, Chile</p>
     </footer>
