--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Claudio Espinoza | WDD 130 | Personal Homepage</title>
     <meta name="description"
         content="This homepage is a picture of myself Claudio Espinoza. I am taking this course web fundamentals to increase my website developement skills. The purpose of this page is to show web development skills">
-    <meta name=" author" content="Claudio A. Espinoza">
+    <meta name=" author" content="Claudio Espinoza">
     <link rel=" stylesheet" href="styles/styles.css">
 </head>
 
