--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Claudio Espinoza | WDD 130 | Personal Homepage</title>
     <meta name="description"
-        content="This homepage is a picture of myself Claudio Espinoza. I am taking this course web fundamentals to increase my website developement skills. The purpose of this page is to show web development skills">
-    <meta name=" author" content="Claudio Espinoza">
+        content="This homepage is a picture of myself Claudio Espinoza. I am taking this course web fundamentals to increase my website developement skills. The purpose of this page is to show web development .">
+    <meta name="author" content="Claudio Espinoza">
     <link rel=" stylesheet" href="styles/styles.css">
 </head>
 
