--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <p>I am Claudio Espinoza. I am from Chile, what I like the most, is spending
             meaningful time with my family. This is a picture of one of our vacation
             trip to The Rio Temple with my wife.</p>
+        <ul>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=eng"
+                    target="_blank">Rio de Janeiro Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=eng"
+                    target="_blank">San Diego Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/concepcion-chile-temple?lang=eng"
+                    target="_blank">Concepción Chile Temple</a></li>
+        </ul>
     </main>
     <aside>
         <h2>Chile</h2>
