week 03 assignmet and css

--- a/index.html
+++ b/index.html
@@ -14,32 +14,56 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
+            <a href="index.html" target=_blank>Rafting Site</a>
+            <a href="https://www.facebook.com/claudio.a.figueroa.33/" target=_blank>Facebook</a>
+            <a href="https://www.linkedin.com/in/claudio-a-espinoza-a6b44064/" target=_blank>Linkedin</a>
         </nav>
     </header>
-    <main>
-        <h1>Claudio Antonio Espinoza | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello my name is Claudio Espinoza" width="200">
-        <p>I am Claudio Espinoza. I am from Chile, what I like the most, is spending
-            meaningful time with my family. This is a picture of one of our vacation
-            trip to The Rio Temple with my wife.</p>
-        <ul>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=eng"
-                    target="_blank">Rio de Janeiro Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=eng"
-                    target="_blank">San Diego Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/concepcion-chile-temple?lang=eng"
-                    target="_blank">Concepción Chile Temple</a></li>
-        </ul>
-    </main>
-    <aside>
-        <h2>Chile</h2>
-        <img src="images/chile.jpg" alt="Chile landscape">
-        <p>Chile is in Southamerica. It bordered by Peru to the north, Argentina to the East, and the pacific ocean to
-            the west.In Chile we have a variety of landscape and weather. We have both weather extremes. In the north we
-            have the atacama desert, and in the south we have the antarctica.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Claudio Antonio Espinoza | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hello my name is Claudio Espinoza" width="200">
+            <p>I am Claudio Espinoza. I am from Chile, what I like the most, is spending
+                meaningful time with my family. This is a picture of one of our vacation
+                trip to The Rio Temple with my wife.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, ut vel. Eius recusandae quo, adipisci
+                ullam quas, vitae laboriosam quasi sint consequatur modi perspiciatis eaque ipsum debitis autem,
+                assumenda
+                nostrum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores impedit beatae, ipsam aut officiis modi
+                illum temporibus quod libero sint cumque, eaque in velit cum voluptates possimus autem consequatur
+                animi!
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quis, rem optio nostrum ut
+                exercitationem aperiam hic harum ab nihil facilis doloremque error voluptates quos eaque eligendi
+                tenetur dolorem velit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo ab perferendis nostrum sit amet sapiente
+                delectus quisquam nemo deserunt sint provident aperiam, enim alias laborum accusamus ducimus corrupti?
+                Repudiandae, quod?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolores vitae assumenda. Quae,
+                necessitatibus culpa unde nostrum odit fuga harum? Saepe dolor quo nihil nulla at itaque exercitationem
+                cum
+                provident.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple?lang=eng"
+                        target="_blank">Rio de Janeiro Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple?lang=eng"
+                        target="_blank">San Diego Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/concepcion-chile-temple?lang=eng"
+                        target="_blank">Concepción Chile Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+
+            <aside>
+                <h2>Chile</h2>
+                <img src="images/chile.jpg" alt="Chile landscape">
+                <p>Chile is in Southamerica. It bordered by Peru to the north, Argentina to the East, and the pacific
+                    ocean to
+                    the west.In Chile we have a variety of landscape and weather. We have both weather extremes. In the
+                    north we
+                    have the atacama desert, and in the south we have the antarctica.</p>
+            </aside>
+    </div>
     <footer>
         <p>©2025 🌴Claudio A. Espinoza 🌴Nacimiento, Chile</p>
     </footer>
