--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" This web page is about White Water Rafting in Chile. This web page will take you through
+    <meta name="description" content="This web page is about White Water Rafting in Chile. This web page will take you through
         our exciting tour guide by our professional team. You will not regreted. Come with us and have fun.">
     <meta name="author" content="Claudio A. Espinoza">
     <title>Chile White Water Rafting</title>
