--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,13 +13,16 @@
 
 <body>
     <header>
-        <img src="images/logo.jpg" alt="Chile White Water Rafting">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">about Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">contact Us</a>
-        </nav>
+        <div class="grid">
+            <img src="images/logo.jpg" alt="Chile White Water Rafting">
+
+            <nav class="navigation">
+                <a href="index.html">Home</a>
+                <a href="about.html">about Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">contact Us</a>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="hero">
@@ -40,6 +43,14 @@
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <figure>
+                <img src="images/caption 1.jpg" alt="Chile White Water Rafting">
+                <img src="images/caption 2.jpg" alt="Chile White Water Rafting">
+                <img src="images/caption 3.jpg" alt="Chile White Water Rafting">
+                <img src="images/caption 4.jpg" alt="Chile White Water Rafting">
+                <img src="images/caption 5.jpg" alt="Chile White Water Rafting">
+            </figure>
+
         </section>
 
     </main>
