poll form week 05

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,6 +37,7 @@
         </div>
         <section>
             <h2>History</h2>
+            <img src="images/history.jpg" alt="History">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae cum ipsa, odio ex nemo
                 eligendi consequatur officiis molestias quis dolores numquam dolorem quam, aspernatur ipsum, molestiae
                 est. Quaerat, repellendus?</p>
