week 4 about assignment changes

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,21 +28,21 @@
         <div class="hero">
             <img src="images/rafting.jpg" alt="White Water Rafting">
             <h1>Chile White Water Rafting</h1>
-            <article>
+            <article class="textinsidebanner">
                 <img src="images/happy.jpg" alt="Happy Working Employee">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A illum provident qui corporis libero
                     tenetur eligendi reprehenderit nesciunt pariatur! Eaque laboriosam facilis rerum veritatis fugit sit
                     amet vel fuga perferendis!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <img src="images/history.jpg" alt="History">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet repudiandae cum ipsa, odio ex nemo
                 eligendi consequatur officiis molestias quis dolores numquam dolorem quam, aspernatur ipsum, molestiae
                 est. Quaerat, repellendus?</p>
         </section>
-        <section>
+        <section class="container">
             <h2>Adventure Awaits You!</h2>
             <figure>
                 <img src="images/caption1.jpg" alt="Chile White Water Rafting">
