--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/poll-form.css">
 </head>
 
 <body>
@@ -12,10 +13,14 @@
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
-                <label for="fullname">Fullname:</label>
-                <input type="text" id="fullname" name="fullname">
-                <label for="useremail">Email:</label>
-                <input type="email" id="useremail" name="useremail">
+
+                <div class="form-item column2">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="useremail">Email:</label>
+                    <input type="email" id="useremail" name="useremail" </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
